--- a/shelter.html
+++ b/shelter.html
@@ -22,7 +22,7 @@
             <nav class="header_menu">
                 <ul class="nav__menu">
                     <li class="link-1"><a href="" class="paragraph-l__link">About the shelter</a></li>
-                    <li class="link-2"><a href="" class="paragraph-l__link">Our pets</a></li>
+                    <li class="link-2"><a href="our-pets.html" class="paragraph-l__link">Our pets</a></li>
                     <li class="link-3"><a href="" class="paragraph-l__link">Help the shelter</a></li>
                     <li class="link-4"><a href="" class="paragraph-l__link">Contacts</a></li>
                 </ul>
@@ -41,9 +41,8 @@
             <div class="start-screen-puppy">
             </div>
         </section>
-
-
-    </section>
+   </section>
+    <div class="main">
 
 
     <section class="about">
@@ -63,13 +62,17 @@
                 animals, they become attached to the pets and would hardly ever leave them alone.</p>
         </div>
     </section>
+
+
     <section class="pets">
+
         <div class="box-pets__heading">
             <div class="pets__heading">
                 <h3 class="pets__heading-text">Our friends who
                     <h3 class="pets__heading-text"> are looking for a house</h3></h3>
             </div>
         </div>
+
         <div class="pets_box-card-button">
             <button class="pets__button-left">
                 <i class="fas fa-long-arrow-alt-left"></i></button>
@@ -85,25 +88,23 @@
 
 
                 <div class="pets_card">
-
                     <div class="pets_card">
                         <figure class="pets-jennifer"></figure>
                         <p class="pets-card__title">Jennifer</p>
                         <button class="cards__button_primary">
                             <p class="cards__button_primary__text">Learn more</p></button>
                     </div>
-
                 </div>
-                <div class="pets_card">
 
+                <div class="pets_card">
                     <div class="pets_card">
                         <figure class="pets-woody"></figure>
                         <p class="pets-card__title">Woody</p>
                         <button class="cards__button_primary">
                             <p class="cards__button_primary__text">Learn more</p></button>
                     </div>
-
                 </div>
+
             </div>
 
             <button class="pets__button-right">
@@ -153,6 +154,9 @@
             </div>
         </article>
     </section>
+
+</div>
+
 <footer class="footer">
 <div class="footer__contacts">
     <div class="footer__contacts__box-title">
