--- a/our-pets.html
+++ b/our-pets.html
@@ -12,148 +12,176 @@
 </head>
 <body>
 <div class="container">
-    <header class="header-our-pets">
+    <header class="header header__flex-our-pets">
 
-        <div class="header_logo-our-pets">
-            <p class="logo_title-our-pets">Cozy House</p>
-            <p class="logo_subtitle-our-pets">Shelter for pets in Boston</p>
+        <div class="logo logo__our-pets">
+            <p class="logo__title logo__title_color_our-pets">Cozy House</p>
+            <p class="logo__subtitle logo__subtitle_color_our-pets">Shelter for pets in Boston</p>
         </div>
-        <nav class="header_menu-our-pets">
-            <ul class="nav__menu-our-pets">
-                <li class="link-1-our-pets"><a href="shelter.html" class="paragraph-l__link-our-pets">About the
-                    shelter</a></li>
-                <li class="link-2-our-pets"><a href="" class="paragraph-l__link-our-pets">Our pets</a></li>
-                <li class="link-3-our-pets"><a href="" class="paragraph-l__link-our-pets">Help the shelter</a></li>
-                <li class="link-4-our-pets"><a href="" class="paragraph-l__link-our-pets">Contacts</a></li>
-            </ul>
-        </nav>
+        <nav class="menu">
+                <ul class="menu__header">
+                    <li class="menu__item menu__item_width-1 "><a href=" shelter.html" class="menu__link menu__link_color_our-pets" >About the shelter</a></li>
+                    <li class="menu__item active menu__item_width-2"><a href="" class="menu__link menu__link_color_our-pets">Our pets</a></li>
+                    <li class="menu__item menu__item_width-3"><a href="" class="menu__link menu__link_color_our-pets">Help the shelter</a></li>
+                    <li class="menu__item menu__item_width-4"><a href="" class="menu__link menu__link_color_our-pets">Contacts</a></li>
+                </ul>
+            </nav>
+
+
+        <div class="mobile-menu__wrapper">
+            <nav class="mobile-menu">
+                <input type="checkbox" id="checkbox" class="mobile-menu__checkbox">
+                <label for="checkbox" class="mobile-menu__btn">
+                    <div class="mobile-menu__icon mobile-menu__icon_color-our-pets "></div>
+                </label>
+                <div class="mobile-menu__container">
+                    <ul class="mobile-menu__list">
+                        <li class="mobile-menu__item"><a href="shelter.html" class="mobile-menu__link mobile-menu__link_color-our-pets ">About the shelter</a>
+                        </li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Our pets</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Help the shelter</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Contacts</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+
     </header>
 
     <section class="section_our-pets">
         <div class="box-heading__our-pets">
-            <div class="pets__heading-our-pets">
-                <h3 class="pets__heading-text">Our friends who
-                    <h3 class="pets__heading-text"> are looking for a house</h3></h3>
-            </div>
+<div class="box-heading__our-pet-wrapper">
+                <h3 class="pets__heading-text h3">Our friends who
+                    <h3 class="pets__heading-text h3"> are looking for a house</h3></h3>
+        </div>
         </div>
 
 
         <section class="cards-container_our-pets">
 
-            <div class="pets_card">
-                <figure class="pets-katrine"></figure>
+            <div class="pets-card">
+                <figure class="pets__katrine"></figure>
                 <p class="pets-card__title">Katrine</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
-            <div class="pets_card">
-                <div class="pets_card">
-                    <figure class="pets-jennifer"></figure>
+
+                <div class="pets-card">
+                    <figure class="pets__jennifer"></figure>
                     <p class="pets-card__title">Jennifer</p>
-                    <button class="cards__button_primary">
-                        <p class="cards__button_primary__text">Learn more</p></button>
+                    <button class="pets-card__button button-primary">
+                        <p class="pets-card__button-text">Learn more</p></button>
                 </div>
-            </div>
 
-            <div class="pets_card">
-                <div class="pets_card">
-                    <figure class="pets-woody"></figure>
+
+
+                <div class="pets-card">
+                    <figure class="pets__woody"></figure>
                     <p class="pets-card__title">Woody</p>
-                    <button class="cards__button_primary">
-                        <p class="cards__button_primary__text">Learn more</p></button>
+                    <button class="pets-card__button button-primary">
+                        <p class="pets-card__button-text">Learn more</p></button>
                 </div>
-            </div>
 
-            <div class="pets_card">
+
+            <div class="pets-card">
                 <figure class="pets-sophia"></figure>
                 <p class="pets-card__title">Sophia</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
-            <div class="pets_card">
+            <div class="pets-card">
                 <figure class="pets-timmy"></figure>
                 <p class="pets-card__title">Timmy</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
-            <div class="pets_card">
+            <div class="pets-card">
                 <figure class="pets-charly"></figure>
                 <p class="pets-card__title">Charly</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
-            <div class="pets_card">
+            <div class="pets-card">
                 <figure class="pets-scarlet"></figure>
                 <p class="pets-card__title">Scarlet</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
 
-            <div class="pets_card">
+            <div class="pets-card">
                 <figure class="pets-freddie"></figure>
                 <p class="pets-card__title">Freddie</p>
-                <button class="cards__button_primary">
-                    <p class="cards__button_primary__text">Learn more</p></button>
+                <button class="pets-card__button button-primary">
+                    <p class="pets-card__button-text">Learn more</p></button>
             </div>
         </section>
 
         <div class="navigation">
-            <button class="button-paginator-1"><h4 class="button-paginator__text-1"><<</h4></button>
-            <button class="button-paginator-1"><h4 class="button-paginator__text-1"><</h4></button>
-            <button class="button-paginator-2"><h4 class="button-paginator__text-2">1</h4></button>
-            <button class="button-paginator-3"><h4 class="button-paginator__text-2"> > </h4></button>
-            <button class="button-paginator-3"><h4 class="button-paginator__text-2"> >> </h4></button>
+            <button class="button__paginator-1"><h4 class="button-paginator__text-1"><<</h4></button>
+            <button class="button__paginator-1"><h4 class="button-paginator__text-1"><</h4></button>
+            <button class="button__paginator-2"><h4 class="button-paginator__text-2">1</h4></button>
+            <button class="button__paginator-3"><h4 class="button-paginator__text-2"> > </h4></button>
+            <button class="button__paginator-3"><h4 class="button-paginator__text-2"> >> </h4></button>
         </div>
 
     </section>
 
 
     <footer class="footer">
-        <div class="footer__contacts">
-            <div class="footer__contacts__box-title">
-                <h3 class="footer__contacts__title">For questions </h3>
-                <h3 class="footer__contacts__title">and suggestions</h3></div>
 
-            <div class="footer__contacts__box-mail">
-                <div class="footer__contacts__mail__icon-email">
-                </div>
-                <h4 class="footer__contacts__mail__text">email@shelter.com</h4></div>
+        <div class="footer-box__contacts">
+            <div class="footer-contacts__box-title">
+                <h3 class="footer-contacts__title h3 footer-contacts__title_color">For questions </h3>
+                <h3 class="footer-contacts__title h3 footer-contacts__title_color">and suggestions</h3></div>
 
-            <div class="footer__contacts__box-phone">
-                <div class="footer__contacts__phone__icon-phone">
-                </div>
-                <h4 class="footer__contacts__phone__text">+13 674 567 75 54</h4></div>
+            <div class="footer-box__contacts-mail">
+                <a href="#" class="footer-contacts__mail-icon-email">
+
+                    <h4 class="footer-contacts__mail-text h4 footer-contacts__mail-text_color">email@shelter.com</h4>
+                </a>
+            </div>
+
+            <div class="footer-contacts__box-phone">
+                <a href="#" class="footer-contacts__phone-icon-phone"></a>
+
+
+                <a href="#" class="footer-contacts__phone-link h4 footer-contacts__phone-link_color">+13 674 567 75
+                    54</a>
+            </div>
 
         </div>
 
         <div class="footer__location">
 
-            <div class="footer__location__box-title">
-                <h3 class="footer__location__title">We are waiting</h3>
-                <h3 class="footer__location__title">for your visit</h3></div>
+            <div class="footer-location__box-title">
+                <h3 class="footer-location__title h3 footer-location__title_color">We are waiting</h3>
+                <h3 class="footer-location__title h3 footer-location__title_color">for your visit</h3></div>
 
-            <div class="footer__location__box-boston">
-                <div class="footer__location__boston__icon-boston"></div>
-                <div class="footer__location__box-boston__text">
-                    <h4 class="footer__location__boston__text">1 Central Street, Boston
-                        <h3 class="footer__location__boston__text">(entrance from the store)</h3></h4>
+            <div class="footer-location__box-boston">
+                <div class="footer-location__boston-icon-boston"></div>
+                <div class="footer-location__box-boston__text">
+                    <h4 class="footer-location__boston-text h4 footer-location__boston-text_color">1 Central Street,
+                        Boston</h4>
+                    <h4 class="footer-location__boston-text h4 footer-location__boston-text_color">(entrance from the
+                        store)</h4>
                 </div>
             </div>
 
-            <div class="footer__location__box-london">
-                <div class="footer__location__phone__icon-london">
+            <div class="footer-location__box-london">
+                <div class="footer-location__phone-icon-london">
                 </div>
-                <h4 class="footer__location__london__text">18 South Park, London </h4></div>
+                <h4 class="footer-location__london-text h4 footer-location__london-text_color ">18 South Park,
+                    London </h4></div>
         </div>
 
-        <div class="footer__puppy"></div>
+        <div class="footer__puppy"></div> <!-- img ?-->
     </footer>
-
 
 </div>
 </body>
