--- a/our-pets.html
+++ b/our-pets.html
@@ -106,8 +106,8 @@
                     <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
-            <div class="pets-card">
-                <figure class="pets-scarlet"></figure>
+            <div class="pets-card ">
+                <figure class="pets-scarlet "></figure>
                 <p class="pets-card__title">Scarlet</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
@@ -180,7 +180,7 @@
                     London </h4></div>
         </div>
 
-        <div class="footer__puppy"></div> <!-- img ?-->
+        <img src="img/footer/footer-puppy.png" class="footer__puppy">
     </footer>
 
 </div>
