--- a/our-pets.html
+++ b/our-pets.html
@@ -9,17 +9,19 @@
     <script src="https://kit.fontawesome.com/c42e8baf3d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style-text.css">
+    <link rel="stylesheet" href="style/style-adaptive.css">
 </head>
 <body>
 <div class="container">
-    <header class="header header__flex-our-pets">
+    <header class="header container__header">
 
-        <div class="logo logo__our-pets">
+        <div class="logo header__logo">
             <p class="logo__title logo__title_color_our-pets">Cozy House</p>
             <p class="logo__subtitle logo__subtitle_color_our-pets">Shelter for pets in Boston</p>
         </div>
-        <nav class="menu">
-                <ul class="menu__header">
+        <nav class="wrapper-menu">
+                <ul class="menu">
                     <li class="menu__item menu__item_width-1 "><a href=" shelter.html" class="menu__link menu__link_color_our-pets" >About the shelter</a></li>
                     <li class="menu__item active menu__item_width-2"><a href="" class="menu__link menu__link_color_our-pets">Our pets</a></li>
                     <li class="menu__item menu__item_width-3"><a href="" class="menu__link menu__link_color_our-pets">Help the shelter</a></li>
@@ -34,7 +36,6 @@
                 <label for="checkbox" class="mobile-menu__btn">
                     <div class="mobile-menu__icon mobile-menu__icon_color-our-pets "></div>
                 </label>
-                <div class="mobile-menu__container">
                     <ul class="mobile-menu__list">
                         <li class="mobile-menu__item"><a href="shelter.html" class="mobile-menu__link mobile-menu__link_color-our-pets ">About the shelter</a>
                         </li>
@@ -42,7 +43,6 @@
                         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Help the shelter</a></li>
                         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Contacts</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
 
@@ -61,7 +61,7 @@
         <section class="cards-container_our-pets">
 
             <div class="pets-card">
-                <figure class="pets__katrine"></figure>
+                <img src="img/pets-card/pets-katrine.png" class="pets-card__katrine">
                 <p class="pets-card__title">Katrine</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
@@ -69,7 +69,7 @@
 
 
                 <div class="pets-card">
-                    <figure class="pets__jennifer"></figure>
+                    <img src="img/pets-card/pets-jennifer.png" class="pets-card__jennifer">
                     <p class="pets-card__title">Jennifer</p>
                     <button class="pets-card__button button-primary">
                         <p class="pets-card__button-text">Learn more</p></button>
@@ -78,7 +78,7 @@
 
 
                 <div class="pets-card">
-                    <figure class="pets__woody"></figure>
+                    <img src="img/pets-card/pets-woody.png" class="pets-card__woody">
                     <p class="pets-card__title">Woody</p>
                     <button class="pets-card__button button-primary">
                         <p class="pets-card__button-text">Learn more</p></button>
@@ -86,28 +86,28 @@
 
 
             <div class="pets-card">
-                <figure class="pets-sophia"></figure>
+                <img src="img/pets-card/pets-sophia.png" class="pets-card__sophia">
                 <p class="pets-card__title">Sophia</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
             <div class="pets-card">
-                <figure class="pets-timmy"></figure>
+                <img src="img/pets-card/pets-timmy.png" class="pets-card__timmy">
                 <p class="pets-card__title">Timmy</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
             <div class="pets-card">
-                <figure class="pets-charly"></figure>
+                <img src="img/pets-card/pets-charly.png" class="pets-card__charly">
                 <p class="pets-card__title">Charly</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
             </div>
 
             <div class="pets-card ">
-                <figure class="pets-scarlet "></figure>
+                <img src="img/pets-card/pets-scarlet.png" class="pets-card__scarlet">
                 <p class="pets-card__title">Scarlet</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
@@ -115,7 +115,7 @@
 
 
             <div class="pets-card">
-                <figure class="pets-freddie"></figure>
+                <img src="img/pets-card/pets-freddie.png" class="pets-card__freddie">
                 <p class="pets-card__title">Freddie</p>
                 <button class="pets-card__button button-primary">
                     <p class="pets-card__button-text">Learn more</p></button>
@@ -123,11 +123,11 @@
         </section>
 
         <div class="navigation">
-            <button class="button__paginator-1"><h4 class="button-paginator__text-1"><<</h4></button>
-            <button class="button__paginator-1"><h4 class="button-paginator__text-1"><</h4></button>
-            <button class="button__paginator-2"><h4 class="button-paginator__text-2">1</h4></button>
-            <button class="button__paginator-3"><h4 class="button-paginator__text-2"> > </h4></button>
-            <button class="button__paginator-3"><h4 class="button-paginator__text-2"> >> </h4></button>
+            <button class="button__paginator-1"><p class="button-paginator__text-1"><<</p></button>
+            <button class="button__paginator-1"><p class="button-paginator__text-1"><</p></button>
+            <button class="button__paginator-2"><p class="button-paginator__text-2">1</p></button>
+            <button class="button__paginator-3"><p class="button-paginator__text-2"> > </p></button>
+            <button class="button__paginator-3"><p class="button-paginator__text-2"> >> </p></button>
         </div>
 
     </section>
@@ -143,7 +143,7 @@
             <div class="footer-box__contacts-mail">
                 <a href="#" class="footer-contacts__mail-icon-email">
 
-                    <h4 class="footer-contacts__mail-text h4 footer-contacts__mail-text_color">email@shelter.com</h4>
+                    <p class="footer-contacts__mail-text h4 footer-contacts__mail-text_color">email@shelter.com</p>
                 </a>
             </div>
 
@@ -164,25 +164,24 @@
                 <h3 class="footer-location__title h3 footer-location__title_color">for your visit</h3></div>
 
             <div class="footer-location__box-boston">
-                <div class="footer-location__boston-icon-boston"></div>
-                <div class="footer-location__box-boston__text">
-                    <h4 class="footer-location__boston-text h4 footer-location__boston-text_color">1 Central Street,
-                        Boston</h4>
-                    <h4 class="footer-location__boston-text h4 footer-location__boston-text_color">(entrance from the
-                        store)</h4>
-                </div>
+                <img src="img/footer__location/icon-marker.png" class="footer-location__boston-icon-boston">
+             <div class="footer-location__box-boston-text">
+                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">1 Central Street,
+                        Boston</p>
+                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">(entrance from the
+                        store)</p>
+              </div>
             </div>
 
             <div class="footer-location__box-london">
                 <div class="footer-location__phone-icon-london">
                 </div>
-                <h4 class="footer-location__london-text h4 footer-location__london-text_color ">18 South Park,
-                    London </h4></div>
+                <p class="footer-location__london-text h4 footer-location__london-text_color ">18 South Park,
+                    London </p></div>
         </div>
 
         <img src="img/footer/footer-puppy.png" class="footer__puppy">
     </footer>
-
 </div>
 </body>
 </html>
